app/components/square.module.css
.puzzle {
    width: 355px;
}

.puzzleHeader {
    display: flex;
    justify-content: space-between;
}

.reload {
    font-size: 24px;
}

.square {
    border: 1px solid black;
    font-weight: bold;
    width: 40px;
    height: 40px;
    margin-left: -1px;
    margin-top: -1px;
}

.editableSquare {
    font-weight: normal;
}

.editableSquare:hover {
    background-color: papayawhip;
}

.row {
    display: inline-block;
}

.bottomBorder {
    margin-top: 1px;
}

.rightBorder {
    margin-left: 0px;
}

.selectButton {
    margin: 20px 3px;
    width: 40px;
    height: 40px;
}

.selected {
    background-color: darkgrey;
    font-weight: bold;
    color: white;
}

.selectButton:hover {
    background-color: grey;
    color: white;
}

